--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
             {{- end}}
           env:
             {{- range $key, $value := $.Values.env }}
-        - name: {{ $key | quote }}
+        - name: {{ $key }}
           value: {{ $value | quote }}
             {{- end }}
           ports:
