--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -50,3 +50,44 @@ spec:
           - vh-infra-core-AppInsightsKey
     env:
       AdGroup__Administrator: "VirtualRoomAdministrator"
+      AdGroup__CaseType: "CaseType"
+      AdGroup__External: "External"
+      AdGroup__Judge: "VirtualRoomJudge"
+      AdGroup__JudgesTestGroup: "TestAccount"
+      AdGroup__ProfessionalUser: "VirtualRoomProfessionalUser"
+      APPINSIGHTS_PROFILERFEATURE_VERSION: "disabled"
+      APPINSIGHTS_SNAPSHOTFEATURE_VERSION: "disabled"
+      ApplicationInsights_InstrumentationKey: "<azure-secret:vh-infra-core-AppInsightsKey>"
+      APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=<azure-secret:vh-infra-core-AppInsightsKey>"
+      ApplicationInsightsAgent_EXTENSION_VERSION: "~2"
+      AzureAd_ClientSecret: "<azure-secret:vh-user-api-key>"
+      AzureAd_ClientId: "<azure-secret:vh-user-api-appid>"
+      AzureAd_TenantId: "<azure-secret:TenantId>"
+      AzureAd_VhUserApiResourceId: "<azure-secret:vh-user-api-identifieruris>"
+      ConnectionStrings:RedisCache: "<azure-secret:redis-connection-str>"
+      DefaultPassword: "<azure-secret:defaultpassword"
+      DiagnosticServices_EXTENSION_VERSION: "disabled"
+      DisableHttpsRedirection: "true"
+      InstrumentationEngine_EXTENSION_VERSION: "disabled"
+      IsLive: "False"
+      MSDEPLOY_RENAME_LOCKED_FILES: "1"
+      ReformEmail: "hearings.reform.hmcts.net"
+      SnapshotDebugger_EXTENSION_VERSION: "disabled"
+      TestDefaultPassword: "<azure-secret:testdefaultpassword>"
+      Testing_ExistingEmail: "UserApiTestUser@a.com"
+      Testing_ExistingGroups_0_Displayname: "External"
+      Testing_ExistingGroups_0_GroupId: "121fa058-1796-4531-a9ee-63be1d4dc630"
+      Testing_ExistingGroups_1_Displayname: "UserApiTestGroup"
+      Testing_ExistingGroups_1_GroupId: "371ac75b-22b1-48d8-a3d8-f0587604d01f"
+      Testing_ExistingUserDisplayname: "User Api Test User"
+      Testing_ExistingUserFirstname: "User"
+      Testing_ExistingUserId: "948cb183-00cf-4251-8b13-6c39a1b0c25d"
+      Testing_ExistingUserLastname: "Api"
+      Testing:ExistingUserPrincipal: "UserApiTestUser@hearings.reform.hmcts.net"
+      Testing__NewGroups__0__Displayname: "NewUserApiTestGroup"
+      Testing__NewGroups__0__GroupId: "7d62cf17-c548-4a69-8f8f-4bc7fee90fbe"
+      VhServices__UserApiResourceId: "https://vh-user-api-dev.azurewebsites.net"
+      VhServices__UserApiUrl: "https://vh-user-api-dev-staging.azurewebsites.net/"
+      XDT_MicrosoftApplicationInsights_BaseExtensions: "disabled"
+      XDT_MicrosoftApplicationInsights_Mode: "default"
+      ZapConfiguration:BuildConfigMode: "Release"
