--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -67,7 +67,7 @@ spec:
             - name: "ConnectionStrings__RedisCache"
               value: {{ .Values.env.ConnectionStrings__RedisCache | quote }}
             - name: "DefaultPassword"
-              value: {{ .Values.env.DefaultPassword | quote }}
+              value: {{ .Values.env.DefaultPassword }}
             - name: DiagnosticServices_EXTENSION_VERSION
               value: {{ .Values.env.DiagnosticServices_EXTENSION_VERSION | quote }}
             - name: "DisableHttpsRedirection"
@@ -92,7 +92,7 @@ spec:
               value: {{ .Values.env.Testing__ExistingGroups__0__GroupId | quote }}
             - name: "Testing__ExistingGroups__1__Displayname"
               value: {{ .Values.env.Testing__ExistingGroups__1__Displayname | quote }}
-            - name: "Testing_ExistingGroups__1__GroupId"
+            - name: "Testing__ExistingGroups__1__GroupId"
               value: {{ .Values.env.Testing_ExistingGroups__1__GroupId | quote }}
             - name: "Testing__ExistingUserDisplayname"
               value: {{ .Values.env.Testing__ExistingUserDisplayname | quote }}
